--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet"
 	th:href="@{/webjars/font-awesome/5.15.4/css/all.min.css}" />
 </head>
-<body>
+<body style="background-image: url('/images/f1.jpg');">
 	<nav th:replace="index :: navbar"></nav>
 	
 	<section>
