--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet"
 	th:href="@{/webjars/font-awesome/5.15.4/css/all.min.css}" />
 </head>
-<body>
+<body style="background-image: url('/images/f1.jpg');">
 	<nav th:fragment="navbar">
 		<ul class="nav justify-content-center nav-tabs">
 		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Inicio</a></li>
