--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,9 @@
 	th:href="@{/webjars/bootstrap/5.1.2/css/bootstrap.min.css}" />
 <link rel="stylesheet"
 	th:href="@{/webjars/font-awesome/5.15.4/css/all.min.css}" />
+<link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
-<body style="background-image: url('/images/f1.jpg');">
+<body>
 	<nav th:fragment="navbar">
 		<ul class="nav justify-content-center nav-tabs">
 		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Inicio</a></li>
@@ -35,4 +36,5 @@
 			</tbody>
 		</table>
 	</div>
+	</body>
 </html>
