Ajustes de espacio en los html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 	</nav>
 	
 	<div class="container col-4">
-	<h2><i class="fas fa-adjust"></i>Resumen</h2>
+	<h2><i class="fas fa-adjust"></i>Resumen</h2><hr/>
 		<table>
 			<thead>
 				<tr>
