--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -14,7 +14,7 @@
 	
 	<section>
 		<div class="container col-4">
-			<h2 class="nav justify-content-center"><i class="fa fa-archive" aria-hidden="true"></i><span th:text="' '+${titulo}"></span></h2>
+			<h2 class="nav justify-content-center"><i class="fa fa-archive" aria-hidden="true"></i><span th:text="' '+${titulo}"></span></h2><hr/>
 			<form th:action="@{/form}" method="POST" th:object="${empleado}">
 		<div class="form-floating mb-3">
 			<input type="text" class="form-control"id="nombre" th:field="*{nombre}">
