--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -12,7 +12,7 @@
 <body>
 	<nav th:replace="index :: navbar"></nav>
 	<div class="container">
-	<h2><i class="fas fa-list" ></i><span th:text="' '+${titulo}"></span></h2>
+	<h2><i class="fas fa-list" ></i><span th:text="' '+${titulo}"></span></h2><hr/>
 	<table class="table">
 		<thead>
 			<tr>
@@ -40,4 +40,5 @@
 		</tbody>
 	</table>
 	</div>
+</body>
 </html>
