--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -14,7 +14,8 @@
 	
 	<section>
 		<div class="container col-4">
-			<h2 class="nav justify-content-center"><i class="fa fa-archive" aria-hidden="true"></i><span th:text="' '+${titulo}"></span></h2><hr/>
+			<h2 class="nav justify-content-center"><i class="fa fa-archive" aria-hidden="true"></i><span th:text="' '+${titulo}"></span></h2>
+			<br />
 			<form th:action="@{/form}" method="POST" th:object="${empleado}">
 		<div class="form-floating mb-3">
 			<input type="text" class="form-control"id="nombre" th:field="*{nombre}">
@@ -45,10 +46,12 @@
 			<input type="number" class="form-control"id="salario" th:field="*{salario}">
 			<label for="salario" class="form-label">Salario</label>
 			<div class="form-text text-danger" th:if="${#fields.hasErrors('salario')}" th:errors="*{salario}"></div>
+		</div><br/>
+		<div>
+			<button type="submit" class="btn btn-primary">Guardar</button>
 		</div>
-		
-		<button type="submit" class="btn btn-primary">Guardar</button>
 	</form>
+	
 		</div>
 	</section>
 </body>
