Se agrega mensajes flash para el formulario

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-	<nav th:replace="index :: navbar"></nav>
+	<header th:replace="/layout/plantillas :: navbar"></header>
 	
 	<section>
 		<div class="container col-4">
