--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,14 +10,7 @@
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-	<nav th:fragment="navbar">
-		<ul class="nav justify-content-center nav-tabs">
-		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Inicio</a></li>
-		<li class="nav-item"><a class="nav-link" th:href="@{/lista}">Empleados</a></li>
-		<li class="nav-item"><a class="nav-link" th:href="@{/form}">Agregar</a></li>
-		<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Salir<i class="fas fa-door-open"></i></a></li>
-	</ul>
-	</nav>
+	<header th:replace="/layout/plantillas :: navbar"></header>
 	
 	<div class="container col-4">
 	<h2><i class="fas fa-adjust"></i>Resumen</h2><hr/>
