--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -14,21 +14,18 @@
 	<div class="container">
 		<nav class="navbar">
 			<div class="container-fluid">
-				<a class="navbar-brand"></a>
+				<h2>
+					<i class="fas fa-list"></i><span th:text="' '+${titulo}"></span>
+				</h2>
 				<form class="d-flex" th:action="@{/listarpornombre}" method="POST">
-					<input class="form-control me-2" type="search" name="nombreBuscar" placeholder="Buscar por nombre"
-						aria-label="Search">
+					<input class="form-control me-2" type="search" name="nombreBuscar"
+						placeholder="Buscar por nombre" aria-label="Search">
 					<button class="btn btn-outline-success" type="submit">Buscar</button>
 				</form>
 			</div>
 		</nav>
 	</div>
-
 	<div class="container">
-		<h2>
-			<i class="fas fa-list"></i><span th:text="' '+${titulo}"></span>
-		</h2>
-		<hr />
 		<table class="table">
 			<thead>
 				<tr>
@@ -52,11 +49,11 @@
 					<td>[[${#numbers.formatDecimal(empleado.salario,3,'POINT',0,'COMMA')}]]<span>
 							Gs.</span></td>
 					<td><a class="btn btn-warning"
-						th:href="@{/form/} + ${empleado.id}"><i class="fas fa-edit"></i></a></td>
+						th:href="@{/form/} + ${empleado.id}"><i class="fas fa-edit"></i> Revisar</a></td>
 					<td><a class="btn btn-danger"
 						th:href="@{/eliminar/} + ${empleado.id}"
 						onclick="return confirm('Eliminar! \nEstas seguro?');"><i
-							class="fas fa-trash-alt"></i></a></td>
+							class="fas fa-trash-alt"></i> Descartar</a></td>
 				</tr>
 			</tbody>
 		</table>
