--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -17,10 +17,10 @@
 				<h2>
 					<i class="fas fa-list"></i><span th:text="' '+${titulo}"></span>
 				</h2>
-				<form class="d-flex" th:action="@{/listarpornombre}" method="POST">
+				<form name="fvalida" class="d-flex" th:action="@{/listarpornombre}" method="POST">
 					<input class="form-control me-2" type="search" name="nombreBuscar"
 						placeholder="Buscar por nombre" aria-label="Search">
-					<button class="btn btn-outline-success" type="submit">Buscar</button>
+					<button class="btn btn-outline-success" type="submit" onclick=" return valida_envia()">Buscar</button>
 				</form>
 			</div>
 		</nav>
@@ -58,5 +58,6 @@
 			</tbody>
 		</table>
 	</div>
+	<script type="text/javascript" th:src="@{/js/validaciones.js}"></script>
 </body>
 </html>
