--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -10,7 +10,20 @@
 <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-	<header th:replace="/layout/plantillas :: navbar"></header>
+	<header th:fragment="navbar">
+	<nav>
+		<ul class="nav justify-content-center nav-tabs">
+			<li class="nav-item"><a class="nav-link" th:href="@{/index}">Inicio</a></li>
+			<li class="nav-item"><a class="nav-link" th:href="@{/lista}">Empleados</a></li>
+			<li class="nav-item"><a class="nav-link" th:href="@{/form}">Agregar</a></li>
+			<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Salir<i class="fas fa-door-open"></i></a></li>
+		</ul>
+	</nav>
+	<div class="alert alert-success" th:if="${success != null}" th:text="${success}"></div>
+	<div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+	<div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}"></div>
+	<div class="alert alert-info" th:if="${info != null}" th:text="${info}"></div>
+	</header>
 	
 	<section>
 		<div class="container col-4">
